--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -97,30 +97,16 @@
       <div class="panel-body">
         <h4 class="orange">Places spectateurs</h4>
         <div class="tabule">
-
-        <div class="orange">En prévente</div>
-          <div class="tabule">
-          7€
-          </div>
-        <div class="orange">Sur place</div>
-          <div class="tabule">
-          8€
-          </div>
-        <div class="orange">Tarif de groupe (à partir de 10 personnes)</div>
-          <div class="tabule">
-          5€/personne
-          </div>
+          <p>Entrée gratuite sur inscription !*<br />
+          *Dans la limite des places disponibles.</p>
+          
         </div>
-        </div>
+      </div>
 
         <!--h4 class="orange">Places joueurs</h4>
           <div class="tabule">Voir section tournois </div>
         <br /-->
-        <p>L'entrée est gratuite pour tous les enfants de moins de 16 ans. L'invitation est à retirer dans le réseau des médiatèques du territoire Evry Centre Essone.</p>
-        
-        <h4 class="orange">N'achetez jamais votre billet à un inconnu !</h4>
-        <p style="font-size: 14px;">Vous n'auriez aucune garantie de sa validité. Seuls les billets achetés sur <%= link_to "evrygamescity.fr", "http://www.evrygamescity.fr" %> et directement aux caisse des Arènes de l’Agora à Evry vous garantissent l'entrée aux Evry Games City. Nous vous rappelons qu'un billet acheté à l'avance vous donne accès directement au contrôle et vous évite ainsi la queue aux caisses ! </p>
-      </div>
+        </div>
     </div>
 
 
