--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -30,11 +30,11 @@
     <div class="col-md-8" id="left-mosaique">
 
       <div class="row">
-        <!--<div class="col-md-12 mosaique slideshow">-->
+        <div class="col-md-12 mosaique slideshow">
           <!--Slideshow-->
-          <%#= render partial: 'static_pages/home/carousel' %>
-            <%#= render 'static_pages/home/billeterie' %>
-        <!--</div>-->
+          <%= render partial: 'static_pages/home/carousel' %>
+            <%= render 'static_pages/home/billeterie' %>
+        </div>
       </div>
       
       <div class="panel transparent" style="
@@ -44,7 +44,7 @@
         <h4>L'événement « so gaming » !</h4>
       </div>
 <p style="font-size:120%; padding:10px;">
-  Evry Games City c’est le rendez-vous annuel « so gaming » de la culture numérique et du jeu vidéo en ile France.<br />
+  Evry Games City c’est le rendez-vous annuel « so gaming » de la culture numérique et du jeu vidéo en ile de France.<br />
   Porté par le succès de la première édition, Evry Games City 2 revient les 16 et 17 Avril prochain aux Arènes de l’Agora, pour deux jours de programmation exceptionnelle.<br />
   <br />
   Entre nouveautés des éditeurs, création des studios indépendants, innovations technologiques, tournois        
