--- a/app/views/static_pages/playing.html.erb
+++ b/app/views/static_pages/playing.html.erb
@@ -18,11 +18,11 @@
       <%= image_tag "PLAYING.jpg", class:"img-responsive" %>
       
       <p style="margin-top:10px">
-        Les tournois e-sport reviennent plus nombreux pour la 2ème année consécutive à Evry.
-        A cette occasion, les organisateurs mettent à disposition des joueurs le Théâtre de l’Agora, transformé 
-        pour l’occasion en e-sport Arena avec une capacité de plus de 240 places assises.<br />
-        Organisé avec le soutien opérationnel de The eSport Academy et des Masters Français du Jeu Vidéo, 
-        l’événement permettra aux meilleurs gamers du moment de s’affronter lors de finales en live !
+        Un parcours visiteurs toujours plus riche pour permettre aux visiteurs de tester toutes les nouveautés 
+        des éditeurs. En partenariat avec Xbox One, Sony Computer, Nintendo, Evry Games City 2ème édition 
+        propose cette année plus de 70 bornes en libres services qui attendent les visiteurs de tous âges pour 
+        tester toutes les nouveautés des éditeurs partenaires.<br />
+        Quelques noms en avant première : Nintendo, Playstation 4, Xbox One, Bandai Namco, Capcom, Warner Bros Games…
       </p>
     </div>
 
