--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -31,7 +31,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <div style="position:relative;height:0px;width:100%;padding-bottom:56.25%;"><iframe frameborder="0" marginheight="0" marginwidth="0" src="https://www.placeminute.com/evry_games_city,3,151844.html" height="100%" width="100%" style="position:absolute;top:0;left:0;"></iframe></div>
+          <a href="https://www.placeminute.com/evry_games_city,3,151844.html" target="_blank"><img src="https://www.placeminute.com/images/billetterie-en-ligne.png" border="0" /></a>
         </div>
       </div>
       
