--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -73,7 +73,8 @@
 	Tel : +33 (0)1 69 47 47 47<br />
 	Fax : +33 (0)1 69 47 47 48</p>
 
-	<p>À 2 minutes à pied de la gare Évry-Courcouronnes Centre</p>
+	<p>À 2 minutes à pied de la gare Évry-Courcouronnes Centre<br />
+	Mentionnez votre code promo "Evry Games" pour obtenir une réduction lors de la réservation !</p>
 
 	
      </div>
