--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -59,13 +59,11 @@
 
     <div class="col-md-4" id="right-mosaique">
       
-      <!--div class="row">
-        <div class="col-md-12 mosaique billeterie">
-          <a href="#" data-toggle="modal" data-target="#myModal">
-            <%#= render 'static_pages/home/billeterie' %>
-          </a>
+      <div class="row">
+        <div class="col-md-12">
+          <a href="https://www.placeminute.com/salon_forum/evry_games_city_2,1,13921.html" target="_blank" style="margin-left:-4px"><img src="https://www.placeminute.com/images/billetterie-en-ligne.png" border="0" /></a>
         </div>
-      </div-->
+      </div>
 
       <div class="row">
         <div class="col-md-12 mosaique twitter center-block">
