--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -51,7 +51,11 @@
   e-sports, et masterclass dédiées à la découverte et au partage de connaissance, Evry Games City 2 a pour 
   ambition de proposer la plus belle et la plus riche des expériences gaming en Ile de France.<br />
   <br />
-  Découvrez nos quatre univers, la <a class="navlink" href="/discovering">Discovering Zone</a>, la <a class="navlink" href="/playing">Playing Zone</a>, la <a class="navlink" href="/gaming">Gaming Zone</a>, ainsi que la <a class="navlink" href="/learning">Learning Zone</a>.
+  Découvrez nos quatre univers, la <a class="navlink" href="/discovering">Discovering Zone</a>, la <a class="navlink" href="/playing">Playing Zone</a>, la <a class="navlink" href="/gaming">Gaming Zone</a>, ainsi que la <a class="navlink" href="/learning">Learning Zone</a>.<br />
+  <br />
+  En parallèle d'Evry Games City 2 se déroule l'inauguration du C19 ! Nouveau venu dans le monde des centres de ressources et d’innovations du jeu vidéo, ce dernier se veut être un soutien pour tous les entrepreneurs motivés à révolutionner l’univers du numérique. <br />
+  Afin de fêter dignement la naissance du C19, Dièse vous propose, avec le soutien de la Confédération Nationale des Juniors-Entreprises (CNJE), une journée de conférences, avec en point d’orgue la visite des deux endroits les plus importants de ce week-end Evryen : le C19 et l’Evry Games City !<br />
+  Toutes les infos <a href="https://www.eventbrite.fr/e/billets-inauguration-du-c19-24395146540">ici</a> !
 </p>
 </div>
 
