modif onglets et contenus textes

--- a/app/views/static_pages/discovering.html.erb
+++ b/app/views/static_pages/discovering.html.erb
@@ -1,35 +1,51 @@
 <div class="panel transparent">
   <div class="panel-body text-center bold">
-    <h1 class="contact-title">La Discovering Zone</h1>
+    <h1 class="contact-title">La Zone Indé</h1>
   </div>
 </div>
 
 <div class="panel transparent">
 
   <div class="panel-heading text-center bold">
-    <h3>Présentation de la Discovering Zone </h3>
+    <h3>Présentation de la Zone Indé</h3>
   </div>
 
   <div class="panel-body">
     <div class="col-md-12 col-xs-12">
 
-      <h3 class="bold orange" style="font-size: 18px;">LA DISCOVERING ZONE, C’EST QUOI ?</h3>
+      <h3 class="bold orange" style="font-size: 18px;">LA ZONE INDÉ, C’EST QUOI ?</h3>
       
       <%= image_tag "EGC_2016_IMG_11.jpg", class:"img-responsive" %>
       
       <p style="margin-top:10px">
-        Pour cette 2ème édition, les organisateurs ont décidé de mettre à l’honneur la créativité et l’innovation 
-        « made in France ». Ce sont 40 des meilleurs studios indépendants Français qui seront présents pour 
-        faire découvrir et partager leurs réalisations.<br />
-        Créé spécialement pour l’occasion, le prix « Indies Games City 2 » récompensera les meilleurs 
-        projets (PC, console, Smartphone) et permettra à l’un d’entre eux de représenter la « French 
-        Touch » lors du prochain salon E3 de Los Angeles.<br />
-        Les lauréats seront élus par un jury international composé de personnalités du secteur (développeurs, 
-        game designers, journalistes, annonceurs, éditeurs, etc…)<br />
-        La mise en œuvre de cette édition spéciale studios indépendants français a été confiée à l’équipe de 
-        « BudGames Interactive ».<br />
+        Entre Innovation, créativité, originalité, Evry Games City se veut le plus
+
+grand rassemblement en France des créateurs de jeux indépendants
+
+(plus de 30 des meilleurs studios francais représentés, réunit par le cluster 
+
+Budgames). Créé spécialement pour l’occasion, le prix « Indies Games 
+
+City » récompensera les meilleurs projets.
+
+Cinq prix décernés : Gameplay, Image, Son, Originalité et Grand Prix 
+
+du jury, sous la houlette d’un jury international composé de journalistes, 
+
+développeurs, et influenceurs. Chacun des gagnants se verra offrir 
+
+l’opportunité d’être incublé pendant un an au C-19, le centre et 
+
+d’innovation de l’Ensiie . Le gagnant du « Grand prix du Jury » se verra 
+
+quand à lui offrir par Budgames une wild card pour le prochain E3 à 
+
+Los Angeles.<br />
         <br />
-        Vous souhaitez venir présenter votre studio ainsi que vos créations ? Envoyez nous un email : <a href="mailto:contact@budgames.net">contact@budgames.net</a> !
+        Vous souhaitez venir présenter votre studio ainsi que vos créations ? Envoyez nous un email : <a href="mailto:contact@budgames.net">contact@budgames.net</a> !<br />
+        <br />
+        <a href="Budgames_concours.pdf" target="_blank">Téléchargez le règlement du concours Indies Games City !</a>
+        
       </p>
     </div>
 
