--- a/app/views/static_pages/gaming.html.erb
+++ b/app/views/static_pages/gaming.html.erb
@@ -1,13 +1,13 @@
 <div class="panel transparent">
   <div class="panel-body text-center bold">
-    <h1 class="contact-title"> La Gaming Zone </h1>
+    <h1 class="contact-title"> La Zone Éducative</h1>
   </div>
 </div>
 
 <div class="panel transparent">
 
   <div class="panel-heading text-center bold">
-    <h3>Présentation de la Gaming Zone </h3>
+    <h3>Présentation de la Zone Éducative</h3>
   </div>
 
   <div class="panel-body">
@@ -18,11 +18,12 @@
       <%= image_tag "Gaming.jpg", class:"img-responsive" %>
       
       <p style="margin-top:10px">
-        Les tournois e-sport reviennent plus nombreux pour la 2ème année consécutive à Evry.
-        A cette occasion, les organisateurs mettent à disposition des joueurs le Théâtre de l’Agora, transformé 
-        pour l’occasion en e-sport Arena avec une capacité de plus de 240 places assises.<br />
-        Organisé avec le soutien opérationnel de The eSport Academy et des Masters Français du Jeu Vidéo, 
-        l’événement permettra aux meilleurs gamers du moment de s’affronter lors de finales en live !
+        Un espace pédagogique totalement dédié aux associations du territoire : le réseau Canopé, les Médiathèques de Grand Paris Sud qui 
+        illustre travail de proximité réalisé tout au long de l’année par les services 
+        culturels et la communauté éducative de l’agglomération.
+        L’école à l’ère du numérique, ateliers ludo-pédagogique, serious-games, 
+        animations interactives et concours amateurs seront à ce rendez-vous des 
+        petits et des grands...
         
       </p>
       
@@ -30,13 +31,6 @@
       
     </div>
     
-          <div class="row">
-
-        <%= render partial: "static_pages/home/mosaique_jeu", locals: { gametag: :lol} %>
-        <%= render partial: "static_pages/home/mosaique_jeu", locals: { gametag: :hs} %>
-        <%= render partial: "static_pages/home/mosaique_jeu", locals: { gametag: :sfv} %>
-
-      </div>
 
 
 </div>
