--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -47,9 +47,14 @@
   <br />
   Découvrez nos quatre univers, la <a class="navlink" href="/discovering">Discovering Zone</a>, la <a class="navlink" href="/playing">Playing Zone</a>, la <a class="navlink" href="/gaming">Gaming Zone</a>, ainsi que la <a class="navlink" href="/learning">Learning Zone</a>.<br />
   <br />
-  En parallèle d'Evry Games City 2 se déroule l'inauguration du C19 ! Nouveau venu dans le monde des centres de ressources et d’innovations du jeu vidéo, ce dernier se veut être un soutien pour tous les entrepreneurs motivés à révolutionner l’univers du numérique. <br />
-  Afin de fêter dignement la naissance du C19, Dièse vous propose, avec le soutien de la Confédération Nationale des Juniors-Entreprises (CNJE), une journée de conférences, avec en point d’orgue la visite des deux endroits les plus importants de ce week-end Evryen : le C19 et l’Evry Games City !<br />
-  Toutes les infos <a href="https://www.eventbrite.fr/e/billets-inauguration-du-c19-24395146540">ici</a> !
+  L’INNOVATION MAJEURE DE CETTE DEUXIÈME ÉDITION C’EST LA CRÉATION D’UN PLATEAU EVRY GAMES CITY.<br />
+<br />
+Animé par Genius de Game One, la programmation se veut spectaculaire : animations, interviews décalées, exhibitions chroniqueurs déjantés, invités pres-
+tigieux, la présence des meilleures équipes nationales de e-sport,..... Une opportunité incroyable de partager de l’intérieur l’experience « so gaming » d’Evry 
+
+Games City et de découvrir tout ce qui fait l’actualité de l’univers. Et comme ce rendez-vous unique ne doit se louper sous aucun prétexte, Evry Games TV est 
+
+à suivre tout le weekend sur twitch et sur les portails des medias partenaires (GamerGen, Joypad.fr, Game Side Story).
 </p>
 </div>
 
