--- a/app/views/static_pages/learning.html.erb
+++ b/app/views/static_pages/learning.html.erb
@@ -1,29 +1,72 @@
 <div class="panel transparent">
   <div class="panel-body text-center bold">
-    <h1 class="contact-title"> La Learning Zone </h1>
+    <h1 class="contact-title"> La Zone Conférence</h1>
   </div>
 </div>
 
 <div class="panel transparent">
 
   <div class="panel-heading text-center bold">
-    <h3>Présentation de la Learning Zone </h3>
+    <h3>Présentation de la Zone Conférence</h3>
   </div>
 
   <div class="panel-body">
     <div class="col-md-12 col-xs-12">
 
-      <h3 class="bold orange" style="font-size: 18px;">LA LEARNING ZONE, C’EST QUOI ?</h3>
+      <h3 class="bold orange" style="font-size: 18px;">LA ZONE CONFÉrence, C’EST QUOI ?</h3>
        
       <%= image_tag "NG.jpg", class:"img-responsive" %>
       
       <p style="margin-top:10px">
-        2 jours de Masterclass interactives et participatives entre le public et le meilleur de la création
-        indépendante française.<br />
-        Tout savoir sur l’élaboration d’un jeu, que se soit sur console, sur pc ou sur mobile. A tour de rôle, studios, 
-        éditeurs, associations, et personnalités viendront présenter sur scène leurs réalisations et business, 
-        exposer leurs inspirations et méthodes pour donner vie à leurs projets de jeu vidéo.<br /> 
-        Les présentations se font sous forme d’ateliers thématisés.
+        Une programmation encore plus riche cette année, pensée tous les
+        publics... Lévan, président du SNJV : Celsius Online / Thierry de Gloomy 
+        Wood : La technologie des voxels / Clément de Fractal Box : Les erreurs 
+        à faire pour ouvrir un studio de jeu vidéo / Oscar de Them Games : 
+        Yore / Sam de WTVR : Créer un jeu vidéo / Fibre Tigre, développeur 
+        indépendant : genèse d’Antioch / Emerick de Narcosis : Le télétravail
+        / Sylvain de Désiré : moteur de jeu maison / Omar Cornu : La vision 
+        des jeux indépendants dans le monde / Vanessa Lalo (psychologue 
+        clinicienne spécialiste du jeu vidéo chez les adolescents) qui interviendra 
+        sur « Créer, collaborer, apprendre avec le jeu vidéo »...
+      </p>
+      <p>
+      Voici le planning des conférences :<br />
+      Samedi :<br />
+<br />
+13h00 à 13h30<br />
+Masterclass, Sylvain de Désiré, qui parlera de son jeu Désiré et son développement<br />
+<br />
+13h45 à 14h15<br />
+Masterclass, Fibre Tigre, développeur indépendant<br />
+<br />
+14h30 à 15h00<br />
+Conférence, SNJV, le jeu vidéo dans la culture française<br />
+<br />
+15h15 à 15h45<br />
+Conférence, Sharon Adjeje, L'intérêt de l'événementiel dans le domaine du jeu vidéo<br />
+<br />
+16h à 16h30<br />
+Masterclass, Sam de WTVR : Créer un jeu vidéo<br />
+<br />
+17h00 à 19h00<br />
+eSport, diffusion + commentaire de la finale League of Legends<br />
+<br />
+dimanche :<br />
+<br />
+14h00 à 15h00<br />
+Conférence, Vanessa Lalo, Créer, collaborer, apprendre avec le jeu vidéo<br />
+<br />
+15h15 à 15h45<br />
+Masterclass, Mickaël Newton, Ubisoft<br />
+<br />
+16h00 à 16h30<br />
+Masterclass, Clément de Fractal Box, les erreurs à faire pour ouvrir un studio de jeu vidéo<br />
+<br />
+16h45 à 17h15<br />
+Masterclass, Emerick de Narcosis, le télétravail dans le développement d'un JV en groupe<br />
+<br />
+17h30 à 18h00<br />
+Masterclass, Eric de Brocard, la presse indépendante en 2016
       </p>
     </div>
 
