--- a/app/views/static_pages/playing.html.erb
+++ b/app/views/static_pages/playing.html.erb
@@ -1,28 +1,30 @@
 <div class="panel transparent">
   <div class="panel-body text-center bold">
-    <h1 class="contact-title"> La Playing Zone </h1>
+    <h1 class="contact-title"> La Zone Éditeurs</h1>
   </div>
 </div>
 
 <div class="panel transparent">
 
   <div class="panel-heading text-center bold">
-    <h3>Présentation de la Playing Zone </h3>
+    <h3>Présentation de la Zone Éditeurs</h3>
   </div>
 
   <div class="panel-body">
     <div class="col-md-12 col-xs-12">
 
-      <h3 class="bold orange" style="font-size: 18px;">LA PLAYING ZONE, C’EST QUOI ?</h3>
+      <h3 class="bold orange" style="font-size: 18px;">LA ZONE ÉDITEURS, C’EST QUOI ?</h3>
       
       <%= image_tag "PLAYING.jpg", class:"img-responsive" %>
       
       <p style="margin-top:10px">
-        Un parcours visiteurs toujours plus riche pour permettre aux visiteurs de tester toutes les nouveautés 
-        des éditeurs. En partenariat avec Xbox One, Sony Computer, Nintendo, Evry Games City 2ème édition 
-        propose cette année plus de 70 bornes en libres services qui attendent les visiteurs de tous âges pour 
-        tester toutes les nouveautés des éditeurs partenaires.<br />
-        Quelques noms en avant première : Nintendo, Playstation 4, Xbox One, Bandai Namco, Capcom, Warner Bros Games…
+        Cette année encore, les plus grands noms de l’univers du jeu vidéo
+        international sont présents.<br />
+        En partenariat avec Xbox One, Sony Computer, Nintendo, ce sont 60 
+        bornes en libres services qui attendent les visiteurs de tous âges pour 
+        tester les meilleurs blogbusters du moment
+        (Ubisoft, Capcom, EA, Warner, Bandai Namco Entertainment, Square Enix, Bigben 
+        interactive, Bethesda et Koch Media).
       </p>
     </div>
 
