--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,16 +37,16 @@
           </ul>
         </li-->
         <li class="<%= set_active("discovering")%>">
-          <a class="navlink" href="/discovering">DISCOVERING ZONE</a>
+          <a class="navlink" href="/discovering">ZONE INDÉ</a>
         </li>
         <li class="<%= set_active("playing")%>">
-          <a class="navlink" href="/playing">PLAYING ZONE</a>
+          <a class="navlink" href="/playing">ZONE ÉDITEURS</a>
         </li>
         <li class="<%= set_active("gaming")%>">
-          <a class="navlink" href="/gaming">GAMING ZONE</a>
+          <a class="navlink" href="/gaming">ZONE ÉDUCATIVE</a>
         </li>
         <li class="<%= set_active("learning")%>">
-          <a class="navlink" href="/learning">LEARNING ZONE</a>
+          <a class="navlink" href="/learning">ZONE CONFÉRENCES</a>
         </li>
         <li class="<%= set_active("informations")%>">
           <a class="navlink" href="/informations"><%= t(:informations)%></a>
