--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -94,9 +94,10 @@ Games City et de découvrir tout ce qui fait l’actualité de l’univers. Et c
     <div class="col-md-12" style="border-top: 2px solid #eaeaea;"></div>
   </div>
 
-  <!--<div class="row partenaires">
-    <%#= render "static_pages/partenaires/partenaire_carousel" %>
-  </div> -->
+  <div class="row partenaires">
+    <%= render "static_pages/partenaires/partenaire_carousel" %>
+  </div>
+  
   <!-- div class="row partenaires">
     <%#= render partial: 'static_pages/home/partenaires_carousel' %>
   </div-->
