--- a/app/views/static_pages/learning.html.erb
+++ b/app/views/static_pages/learning.html.erb
@@ -43,7 +43,7 @@ Masterclass, Fibre Tigre, développeur indépendant<br />
 Conférence, SNJV, le jeu vidéo dans la culture française<br />
 <br />
 15h15 à 15h45<br />
-Conférence, Sharon Adjeje, L'intérêt de l'événementiel dans le domaine du jeu vidéo<br />
+Conférence, Sharon Adjedje, L'intérêt de l'événementiel dans le domaine du jeu vidéo<br />
 <br />
 16h à 16h30<br />
 Masterclass, Sam de WTVR : Créer un jeu vidéo<br />
