--- a/app/views/static_pages/learning.html.erb
+++ b/app/views/static_pages/learning.html.erb
@@ -31,7 +31,7 @@
       </p>
       <p>
       Voici le planning des conférences :<br />
-      Samedi :<br />
+Samedi :<br />
 <br />
 13h00 à 13h30<br />
 Masterclass, Sylvain de Désiré, qui parlera de son jeu Désiré et son développement<br />
@@ -45,13 +45,22 @@ Conférence, SNJV, le jeu vidéo dans la culture française<br />
 15h15 à 15h45<br />
 Conférence, Sharon Adjedje, L'intérêt de l'événementiel dans le domaine du jeu vidéo<br />
 <br />
-16h à 16h30<br />
+16h00 à 16h30<br />
 Masterclass, Sam de WTVR : Créer un jeu vidéo<br />
 <br />
-17h00 à 19h00<br />
-eSport, diffusion + commentaire de la finale League of Legends<br />
+16h40 à 17h00<br />
+Capsules « Le saviez-vous ? » - Un jeu vidéo, un auteur<br />
 <br />
-dimanche :<br />
+17h15 à 18h00<br />
+Budgames, la valorisation du jeu vidéo indépendant français à l'international<br />
+<br />
+18h15 à 19h00<br />
+Capsules « Le saviez-vous ? » - Un jeu vidéo, un auteur<br />
+<br />
+Dimanche :<br />
+<br />
+13h00 à 13h45<br />
+Capsules « Le saviez-vous ? » - Un jeu vidéo, un auteur<br />
 <br />
 14h00 à 15h00<br />
 Conférence, Vanessa Lalo, Créer, collaborer, apprendre avec le jeu vidéo<br />
