--- a/app/views/static_pages/learning.html.erb
+++ b/app/views/static_pages/learning.html.erb
@@ -27,7 +27,9 @@
         / Sylvain de Désiré : moteur de jeu maison / Omar Cornu : La vision 
         des jeux indépendants dans le monde / Vanessa Lalo (psychologue 
         clinicienne spécialiste du jeu vidéo chez les adolescents) qui interviendra 
-        sur « Créer, collaborer, apprendre avec le jeu vidéo »...
+        sur « Créer, collaborer, apprendre avec le jeu vidéo »...<br />
+        <br />
+        <a href="https://www.eventbrite.fr/e/billets-conferences-et-masterclass-evry-games-city-2-24619832582">N'oubliez pas de vous inscrire !</a>
       </p>
       <p>
       Voici le planning des conférences :<br />
